# HardFlow

./: README.md  pyproject.toml
docs/: architecture.md  execution_model.md  pipeline.md
examples/: add_two_numbers.hf  add_two_numbers.rax
hardflow/: __init__.py
hardflow/compiler/: __init__.py  cli.py
hardflow/compiler/backend/: hardflow_backend.py
hardflow/compiler/ir/: ir_builder.py  ir_nodes.py
hardflow/compiler/parser/: rax_parser.py
spec/: HARD_FLOW_SPEC.md  RAX_TO_HARDFLOW.md  TERMINOLOGY.md
